@@ -990,7 +990,7 @@ verilog/parser_sv.v:348: VAR  'parameter' 'P1' 'module' '' 'logic [31:0]' '[3:0]
 verilog/parser_sv.v:348: COMMENT  '// unpacked array'
 verilog/parser_sv.v:349: VAR  'member' 'ecc' 'struct' '' 'logic' '' ''
 verilog/parser_sv.v:349: VAR  'member' 'data' 'struct' '' 'logic [7:0]' '' ''
-verilog/parser_sv.v:349: VAR  'member' 'memsig' 'module' '' 'struct' '' ''
+verilog/parser_sv.v:349: VAR  'net' 'memsig' 'module' 'wire' 'struct' '' ''
 verilog/parser_sv.v:350: ENDMODULE  'endmodule'
 verilog/parser_sv.v:352: MODULE  'module' 'not_a_bug315' undef '0'
 verilog/parser_sv.v:353: VAR  'typedef' 'supply_net_t' 'module' '' 'int' '' ''
@@ -1078,6 +1078,14 @@ verilog/parser_sv.v:417: PORT  'ifmp' 'module' '' '' '' '1'
 verilog/parser_sv.v:418: INSTANT  'if_bug777' 'ifmp' ''
 verilog/parser_sv.v:418: ENDCELL  ''
 verilog/parser_sv.v:419: ENDMODULE  'endmodule'
+verilog/parser_sv.v:421: MODULE  'module' 'bug_param_struct' undef '0'
+verilog/parser_sv.v:422: VAR  'parameter' 'ROWS' 'module' '' 'int' '' '2'
+verilog/parser_sv.v:422: PORT  'ROWS' 'module' '' 'int' '' '1'
+verilog/parser_sv.v:423: VAR  'member' 'row_id' 'struct' '' 'logic [ROWS-1:0]' '' ''
+verilog/parser_sv.v:423: VAR  'parameter' 'data_t' 'module' '' 'type' '' 'struct'
+verilog/parser_sv.v:424: VAR  'port' 'd' 'module' '' 'data_t' '' ''
+verilog/parser_sv.v:424: PORT  'd' 'module' 'input' 'data_t' '' '1'
+verilog/parser_sv.v:425: ENDMODULE  'endmodule'
 verilog/parser_sv09.v:001: COMMENT  '// 1800-2009 mantis1769'
 verilog/parser_sv09.v:002: MODULE  'module' 'mantis1769' undef '0'
 verilog/parser_sv09.v:002: VAR  'parameter' 'N' 'module' '' '' '' '1'
